@@ -12,27 +12,20 @@
 
 # Asynchronous populated table is used for showing the messages on GUI. Defaults to false.
 #domibus.ui.replication.enabled=false
-
 #support team name
 #domibus.ui.support.team.name=EDELIVERY Support Team
-
 #support team email
 #domibus.ui.support.team.email=CEF-EDELIVERY-SUPPORT@ec.europa.eu
-
 #Max rows for CSV export
 #domibus.ui.csv.rows.max=10000
-
-# how many minutes after message's received date the Resend button will become enabled for messages having SEND_ENQUEUED status
-#domibus.ui.resend.action.enabled.received.minutes=5
-
+#Minimum expected waiting time for 'Resend' action, for the received messages get stuck in SEND_ENQUEUED status.
+#Resend button in the UI will enable only after below specific minutes from the message's received time.
+#domibus.resend.action.required.waiting.minutes=5
 #The limit when calculating the number of message logs(disabled when 0)
 #domibus.ui.pages.messageLogs.countLimit=50000
-
 # ---------------------------------- Keystore/Truststore -----------------------
-
 #The location of the keystore
 domibus.security.keystore.location=${domibus.config.location}/keystores/gateway_keystore.jks
-
 #The type of the used keystore
 domibus.security.keystore.type=jks
 
