@@ -7,27 +7,20 @@ domibus.deployment.clustered=false
 
 # The title shown in the Tab of Admin Console (default value: "Domibus")
 domibus.UI.title.name=Domibus
-
 #support team name
 domibus.ui.support.team.name=EDELIVERY Support Team
-
 #support team email
 domibus.ui.support.team.email=CEF-EDELIVERY-SUPPORT@ec.europa.eu
-
 #Max rows for CSV export
 domibus.ui.csv.rows.max=10000
-
-# how many minutes after message's received date the Resend button will become enabled for messages having SEND_ENQUEUED status
-domibus.ui.resend.action.enabled.received.minutes=5
-
+#Minimum expected waiting time for 'Resend' action, for the received messages get stuck in SEND_ENQUEUED status.
+#Resend button in the UI will enable only after below specific minutes from the message's received time.
+domibus.resend.action.required.waiting.minutes=5
 #The limit when calculating the number of message logs(disabled when 0)
 domibus.ui.pages.messageLogs.countLimit=50000
-
 # ---------------------------------- EntityManagerFactory ----------------------
-
 #Packages to be scanned(comma separated)
 domibus.entityManagerFactory.packagesToScan=eu.domibus
-
 domibus.entityManagerFactory.jpaProperty.hibernate.format_sql=true
 
 # ---------------------------------- Security ----------------------------------
